--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.15",
+    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
     "axios": "^0.18.0",
     "path-intersection": "^1.1.1",
     "vue": "^2.5.21",
@@ -18,6 +21,7 @@
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
+    "vuex-history": "^1.0.1",
     "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
